# claude-code-wechat-channel

./: .gitignore  .mcp.json  Cargo.toml  README.md
src/: lib.rs
